methods.picture.PictureMono1.scala.code
override def run() {
  for (i <- 1 to ) {
    makeV();
  }
}

def maveV() {
  forward(3)
  brushDown()
  brushUp()
  left()
  forward()
  brushDown()
  brushUp()
  right()
  forward()
  right()
  forward()
  brushDown()
  brushUp()
  left()
  forward(2)
  left()
}